# zmk-b6-build

.github/workflows/: build.yml  test.yml  zmk_build.yml
app/: CMakeLists.txt  prj.conf
app/boards/shields/keychron/: keychron.zmk.yml
app/boards/shields/keychron/b1/jis/: Kconfig.shield
app/boards/shields/keychron/b1/uk/: Kconfig.shield  keychron_b1_uk.conf  keychron_b1_uk.keymap  keychron_b1_uk.overlay
app/boards/shields/keychron/b1/us/: keychron_b1_us.keymap
app/boards/shields/keychron/b2/jis/: Kconfig.shield  keychron_b2_jis.conf  keychron_b2_jis.keymap  keychron_b2_jis.overlay
app/boards/shields/keychron/b2/kr/: Kconfig.shield  keychron_b2_kr.conf  keychron_b2_kr.keymap  keychron_b2_kr.overlay
app/boards/shields/keychron/b2/uk/: Kconfig.shield  keychron_b2_uk.conf  keychron_b2_uk.keymap  keychron_b2_uk.overlay
app/boards/shields/keychron/b2/us/: Kconfig.shield  keychron_b2_us.conf  keychron_b2_us.keymap
app/boards/shields/keychron/b6/jis/: Kconfig.shield  keychron_b6_jis.conf  keychron_b6_jis.keymap  keychron_b6_jis.overlay
app/boards/shields/keychron/b6/uk/: Kconfig.shield  keychron_b6_uk.conf  keychron_b6_uk.keymap  keychron_b6_uk.overlay
app/boards/shields/keychron/b6/us/: .keymap  CMakeLists.txt  Kconfig.shield  keychron_b6_us.c  keychron_b6_us.conf  keychron_b6_us.keymap  keychron_b6_us.keymap.overlay  keychron_b6_us.overlay
app/dts/bindings/behaviors/: zmk.behavior-key-press.yaml
app/src/: main.c
